# pai-inject-so

./: Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
src/: args.rs  main.rs
testdata/: .gitignore  Makefile  demo2.c  sofile.c
