[package]
name = "pai-inject-so"
version = "0.1.2"
edition = "2021"
license-file = "LICENSE"
description = "A tool to inject shared object files into processes"
readme = "README.md"
homepage = "https://github.com/rstenvi/pai-inject-so"
repository = "https://github.com/rstenvi/pai-inject-so"
keywords = ["inject", "instrumentation", "hook"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Tracing engine
pai = { version = "0.1", git = "https://github.com/rstenvi/pai" }

# Use for local testing
# pai = { version = "0.1", path = "../pai", features = []}

# Argument parsing
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = { version = "2" }

# Error handling
anyhow = "1"

# Logging
log = {version = "0.4", features = ["release_max_level_info"]}
pretty_env_logger = { version = "0.4" }

# Check if we are the newest version
check-latest = "1"

libc = { git = "https://github.com/rstenvi/libc", branch = "libc-0.2", version = "0.2" }
